[package]
name = "sampler"
version = "0.1.0"
authors = ["Arkadiusz Orzechowski <aorzecho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rand = "0.8.3"
bytes = "1.0.1"
#random-fast-rng = "0.1"
fastrand = "1.4"